--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "yiisoft/yii2-bootstrap": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0",
         "2amigos/yii2-usuario": "~1.0",
-        "kartik-v/yii2-widget-datepicker": "~1.4"
+        "kartik-v/yii2-widget-datepicker": "~1.4",
+        "kartik-v/yii2-date-range": "^1.6"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
